--- a/discover.html
+++ b/discover.html
@@ -7,7 +7,10 @@
   <meta name="author" content="James Abraham Kaana Watongola"/>
   <meta name="description" content="Tours and travel, travellers, explore"/>
   <link rel="icon" type="image/png" href="images/fav.png" />
-  <link rel="stylesheet" href="styles/discover.css" /> 
+  <link rel="stylesheet" href="styles/discover.css"
+   /> 
+   <link rel="stylesheet" href="styles/base.css"
+   /> 
   
   
   <!-- HEAD -->
@@ -15,6 +18,7 @@
 <script src="scripts/currency.js" defer></script> 
 <script src="scripts/storage.js" defer></script> 
 <script src="scripts/home.js" defer></script>
+<script src="scripts/discover.js" defer></script> 
 <!-- remove the duplicate <script src="scripts/main.js"></script> at the end -->
 
 </head>
